--- a/jdk6/Dockerfile
+++ b/jdk6/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:14.04
 
 RUN	apt-add-repository ppa:webupd8team/java \
 	&& apt-get update \
-	&& apt-get install --yes oracle-java6-installer \
+	&& apt-get --yes install oracle-java6-installer \
 	&& apt-get autoclean
         
 ENV JAVA_HOME /usr/lib/jvm/java-6-oracle
