--- a/jdk8/Dockerfile
+++ b/jdk8/Dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:16.04
 
 # Add webupd8team ppa
-RUN	echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main" | \
+RUN	echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" | \
 		tee /etc/apt/sources.list.d/webupd8team-java-trusty.list && \
-	echo "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main" | \
+	echo "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" | \
 		tee -a /etc/apt/sources.list.d/webupd8team-java-trusty.list && \
 	apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 && \
 	echo oracle-java6-installer shared/accepted-oracle-license-v1-1 select true | \
