--- a/jdk8/Dockerfile
+++ b/jdk8/Dockerfile
@@ -6,7 +6,7 @@ ENV JAVA_HOME /opt/java-8-oracle
 
 ARG JAVA_URL="http://download.oracle.com/otn-pub/java/jdk/8u31-b13/jdk-8u31-linux-x64.tar.gz"
 
-RUN apt-get update -qy 
+RUN apt-get update -qy \
     && curl -L -O -o /tmp/java-8-oracle.tar.gz -H "Cookie: oraclelicense=accept-securebackup-cookie" $JAVA_URL \
     && mkdir /opt/java-8-oracle \
     && tar -xf /tmp/java-8-oracle.tar.gz -C /opt/java-8-oracle
