--- a/jdk8/Dockerfile
+++ b/jdk8/Dockerfile
@@ -9,9 +9,9 @@ ARG BUILDTIME_DEPS="curl"
 
 RUN apt-get update -qy \
     && apt-get install -qy $BUILDTIME_DEPS \
-    && curl -L -O -o /tmp/java-8-oracle.tar.gz -H "Cookie: oraclelicense=accept-securebackup-cookie" $JAVA_URL \
+    && curl --silent -L -O --output /tmp/java-8-oracle.tar.gz -H "Cookie: oraclelicense=accept-securebackup-cookie" $JAVA_URL \
     && mkdir /opt/java-8-oracle \
-    && tar -xf /tmp/java-8-oracle.tar.gz -C /opt/java-8-oracle \
+    && tar -zxf /tmp/java-8-oracle.tar.gz -C /opt/java-8-oracle \
     && apt-get remote --purge -qy $BUILDTIME_DEPS
 
 ENV PATH /opt/java-8-oracle:$PATH
