--- a/jdk8/Dockerfile
+++ b/jdk8/Dockerfile
@@ -2,9 +2,9 @@ FROM ubuntu:16.04
 
 MAINTAINER Ron Ellis <rone@benetech.org>
 
-ARG BASE_NAME jdk-8-oracle
+ARG BASE_NAME=jdk-8-oracle
 # pass this in with ie "docker build --build-arg JAVA_UPDATE=131"
-ARG JAVA_UPDATE 686
+ARG JAVA_UPDATE
 ARG JAVA_URL="https://artifactory.benetech.org/ext-releases-local/jdk-8u${JAVA_UPDATE}-linux-x64.tar.gz"
 
 ADD $JAVA_URL /tmp/$BASE_NAME.tar.gz
